Fix for bug 487102 -  MMgc profiler: Minor code cleanup (r=treilly+)